# Search-Gen-V

./: README.md
Search-Gen-V/data/: augmentation.py
Search-Gen-V/data/preprocess/: dapo_data.py  sft_data.py
Search-Gen-V/evaluator/eval/: README.md  boot_sgl_endpoint.sh  boot_sgl_moe_endpoint.sh  case_study.py  eval_with_thinking.py  eval_without_thinking.py  pyproject.toml  run_eval.sh  run_tests.py  setup.sh
Search-Gen-V/evaluator/eval/config/: base.yaml  demo.yaml  demo_v2.yaml  template_examples.yaml  test_config.yaml
Search-Gen-V/evaluator/eval/docs/: implementation_notes.md  prompt_templates.md
Search-Gen-V/evaluator/eval/examples/: optimized_prompt.py  template_usage.py
Search-Gen-V/evaluator/eval/nugget_eval/: __init__.py  cli.py  common.py  config.py  constants.py  evaluator.py  exceptions.py  metrics.py  prompts.py  validators.py
Search-Gen-V/evaluator/eval/scripts/: interactive_analysis.py  predictions_to_gold.py
Search-Gen-V/evaluator/eval/tests/: __init__.py  test_fixed_sample_level.py  test_integration_demo.py  test_markdown_only.py  test_optimized_prompt.py  test_run_id_system.py  test_sample_level_categories.py  test_sample_level_metrics.py
Search-Gen-V/evaluator/hotpotqa/:  response.py
Search-Gen-V/trainer/: train_dapo.sh  train_sft.sh
verl/utils/reward_score/: __init__.py  search_gen_v.py
